--- a/src/scss/base/variables.scss
+++ b/src/scss/base/variables.scss
@@ -2,6 +2,7 @@ $white: #fff;
 $black: #000;
 $main: #a4b0d8;
 $purple: #5d79da;
+$grey: #6e7282;
 
 $bounce: cubic-bezier(0.17, 0.67, 0.3, 1.33);
 $Power1EaseOut: cubic-bezier(0.25, 0.46, 0.45, 0.94);
