--- a/src/scss/base/variables.scss
+++ b/src/scss/base/variables.scss
@@ -1,7 +1,8 @@
 $white: #fff;
 $black: #000;
 $main: #a4b0d8;
-$purple: #5d79da;
+
+$purple: #3734a9;
 $grey: #6e7282;
 
 $bounce: cubic-bezier(0.17, 0.67, 0.3, 1.33);
