--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -16,7 +16,7 @@
   @extend .roboto-16-normal;
   background-color: transparent;
   border: 2px solid transparent;
-  color: $black;
+  color: $white;
   border-radius: 10px;
   padding: 16px 50px;
   transition: background-color 0.3s, border 0.3s, color 0.3s;
