--- a/src/scss/base/reset.scss
+++ b/src/scss/base/reset.scss
@@ -25,7 +25,22 @@ html {
 
 body {
   @extend .roboto-16-normal;
-  background-color: $main;
+  color: $white;
+  background: linear-gradient(180deg, $purple 0%, rgba(55, 52, 169, 0) 100%);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("/src/images/banner.png");
+  }
 }
 
 a {
