--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,7 +1,20 @@
 .header {
+  position: fixed;
+  top: 0;
+  left: 0;
   padding: 24px 0;
   width: 100%;
-  background-color: $white;
+  z-index: 10;
+  transition: background-color 0.3s, transform 0.3s, opacity 0.3s;
+
+  &.not-top {
+    background-color: $white;
+    opacity: 0.7;
+  }
+
+  &.hide {
+    transform: translateY(-100%);
+  }
 }
 
 .header__logo {
