--- a/src/scss/components/notes.scss
+++ b/src/scss/components/notes.scss
@@ -35,6 +35,7 @@
   border: 1px solid $main;
   border-radius: 10px;
   color: $black;
+  overflow-y: scroll;
 }
 
 .notes__form-text-description {
@@ -66,7 +67,7 @@
 }
 
 .js-note {
-  max-width: 330px;
+  max-width: 500px;
   width: 100%;
 }
 
@@ -78,10 +79,11 @@
   border-radius: 10px;
   padding: 16px;
   color: $black;
+  overflow-y: scroll;
 }
 
 .notes__item-description {
-  padding: 16px 16px 64px;
+  padding: 16px 16px 96px;
   color: $grey;
 }
 
